# mesonet-in-a-box

./: .env.test  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  install.sh  inventory_config.json  inventory_config_example.json  mypy.ini  pull.sh  pyproject.toml
.kiro/specs/inventory-cli/: design.html  design.md  requirements.md  tasks.md
.kiro/specs/network-schema-methods/: design.md  requirements.md  tasks.md
airtable/: at_schema.json  pyproject.toml
airtable/airtable/: __init__.py  airtable.py
api/: Dockerfile  pyproject.toml  requirements.txt
api/api/: app.py  config.py  models.py
api/api/crud/: get.py
archive/airtable/: pyproject.toml
archive/airtable/tests/: test_get_tables.py
archive/api/: pyproject.toml  requirements.txt
archive/api/api/crud/: __init__.py
archive/db/: pyproject.toml
archive/db/db/: __init__.py
archive/db/db/models/: __init__.py  models.py
archive/network/: test_ln_push.sh
archive/utils/mesonet_utils/: __init__.py  config.py
db/: README.md  init_mongo_docker.sh  main.py  migrate_from_postgres.py  pyproject.toml  requirements.txt
db/db/: make_db_tables.py  models.py
db/db/models/: models.py
mesonet/: main.py
network/: test_ln_push.sh
src/mesonet_in_a_box/: __init__.py  config.py  main.py  migrate_from_airtable.py
utils/: pyproject.toml
utils/mesonet_utils/: config.py  post_data.py  utils.py
