[project]
name = "mesonet-in-a-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.27.2",
    "ipykernel>=6.29.5",
    "keyring>=25.3.0",
    "mbx-db",
    "mbx-inventory",
    "mbx-networks",
    "polars>=1.6.0",
    "pyairtable>=2.3.3",
    "pytest>=8.3.2",
    "sqlalchemy>=2.0.42",
    "typer>=0.12.5",
]

[project.scripts]
mbx = "mesonet_in_a_box.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["mbx-db", "mbx-inventory", "mbx-networks"]

[tool.uv.sources]
mbx-inventory = { workspace = true }
mbx-db = { workspace = true }
mbx-networks = { workspace = true }
