[tool.poetry]
name = "db"
version = "0.1.0"
description = "Tools for managing the mesonet-in-a-box TimescaleDB"
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary"], version = "^3.1.18"}
polars = "^0.20.19"
httpx = "^0.27.0"
airtable = {path = "../airtable"}
mesonet-utils = {path = "../utils"}
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
