[tool.poetry]
name = "mesonet-utils"
version = "0.1.0"
description = "Helper functions for managing mesonet data"
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mesonet_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
