[tool.poetry]
name = "db"
version = "0.1.0"
description = "Tools for managing the mesonet-in-a-box TimescaleDB"
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.19"
httpx = "^0.27.0"
airtable = {path = "../airtable"}
mesonet-utils = {path = "../utils"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
